k8s/argocd/istio-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.k8s.example.com" 
    - "internal.argo.k8s.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "argocd.k8s.example.com"
  - "internal.argo.k8s.example.com"
  gateways:
  - argocd-gateway
  http:
  - timeout: 5s
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
         number: 80
